# CGH_NeuroMod

./: README.md  main.py  pyproject.toml
src/cgh_neuromod/: __init__.py  __main__.py  executor.py  logger.py  main.py  run_threads.py
src/cgh_neuromod/computations/: cgh_pattern_generator.py  computator.py
src/cgh_neuromod/devices/: cobolt_laser.py  device.py  hamamatsu_slm.py
src/cgh_neuromod/gui/: controller_panel.py  custom_widgets.py  image_viewer.py  main_window.py
